# Advisor_FastAPI

./: .gitignore  ExtraStuff.txt  README.md  create_folder.py  main.py  pyproject.toml  requirements.txt
FastAPI_AdvisorAI/app/: main.py
FastAPI_AdvisorAI/app/controllers/: advisor_controller.py
FastAPI_AdvisorAI/app/core/: config.py  utils.py
FastAPI_AdvisorAI/app/models/: schemas.py
FastAPI_AdvisorAI/app/routers/: advisor_router.py
FastAPI_AdvisorAI/app/services/: gemini_service.py
Streamlit_AdvisorAI/: advisor.py  advisor_api.py
